1.4.4 (SVN/unreleased)
======================

  * Added 'context' as an alias for 'object' in action expressions.
    [davisagli, hannosch]

1.4.3
=====

  * Fixed error where non-traversable resources could be registered. This closes
    http://dev.plone.org/plone/ticket/8153
    [dunlapm]

  * Ensure that resources can be removed in xml.
    [maurits]

  * Purge old zope2 Interface interfaces for Zope 2.12 compatibility.
    [elro]

  * Encode inline resources using the site encoding.
    Fixes http://dev.plone.org/plone/ticket/7522
    [wichert]

  * Fixed potential Acquisition problems in viewlets.
    [hannosch]

1.4.2
=====

  * Properly encode the resource id. This fixes moving of resource without JS
    and removing recources which contain special chars like plus signs.
    Fixes http://dev.plone.org/plone/ticket/7482
    [fschulze]

  * Revert part of r7143: returning NotFound from a API call is never
    the right thing to do since it makes the publisher show a object-not-found
    page, hiding the real error. Restore the old behaviour and raise a
    ValueError instead. This fixes mysterious not-found errors from
    GenericSetup imports.
    [wichert]

  * Support Z3 template resources (not just file and image resources).
    [mj]

1.4.1
=====

  * Added '/' to the strings that are filtered out in
    BaseRegistry.generateId(). This fixes #7048.
    [davconvent]

1.4.0
=====

  * Add support for automatic grouping mode to the GenericSetup export/import
    code.
    [wichert]

1.4.0-rc1
=========

 * Added a new automatic grouping mode feature. It is turned off by default.
   When enabled the resources will first be sorted into groups with the same
   merging-relevant settings and after that merged. In the groups the order of
   the resources in the registries will be preserved.
   [hannosch]

 * Changed the exportimport handlers to only cook the resources once at the end
   and not after each new resource has been added.
   [hannosch]

1.4.0-beta5